WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30992
Node.isDefaultNamespace doesn't convert empty strings to null
https://bugs.webkit.org/show_bug.cgi?id=30992
Summary
Node.isDefaultNamespace doesn't convert empty strings to null
nanto_vi (TOYAMA Nao)
Reported
2009-11-01 05:43:20 PST
Node.isDefaultNamespace('') and Node.isDefaultNamespcae(null) can return different values although DOM3 Core says "In programming languages where empty strings can be differentiated from null, empty strings, when given as a namespace URI, are converted to null."
http://www.w3.org/TR/2004/REC-DOM-Level-3-Core-20040407/core.html#Namespaces-Considerations
To reproduce, execute the following JavaScript code: document.implementation.createDocument(null, 'root', null).isDefaultNamespace('') Expected: true Actual: false Confirmed on WebKit-
r50095
Attachments
proposed fix
(4.75 KB, patch)
2009-11-01 16:34 PST
,
Alexey Proskuryakov
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2009-11-01 16:34:30 PST
Created
attachment 42284
[details]
proposed fix And I thought we already fixed all of those..
Alexey Proskuryakov
Comment 2
2009-11-01 17:00:55 PST
Committed <
http://trac.webkit.org/changeset/50396
>.
Lucas Forschler
Comment 3
2019-02-06 09:04:10 PST
Mass moving XML DOM bugs to the "DOM" Component.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug