        Reviewed by Dan Bernstein.

https://bugs.webkit.org/show_bug.cgi?id=30992
        Node.isDefaultNamespace doesn't convert empty strings to null

        Test: fast/dom/Node/default-namespace-empty-argument.html

        * dom/Node.cpp: (WebCore::Node::isDefaultNamespace): Per DOM 3 Core, treat empty input
        as null.



Canonical link: https://commits.webkit.org/41829@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50396 268f45cc-cd09-0410-ab3c-d52691b4dbfc